Added new time distribution to statistics
